--- a/source/_posts/自定義代碼配色.md
+++ b/source/_posts/自定義代碼配色.md
@@ -1,30 +1,30 @@
 ---
-title: 自定義代碼配色
+title: 自定义代码配色
 tags:
   - 教程
   - Hexo
-  - 主題
+  - 主题
   - butterfly
-categories: 進階教程
-keywords: 'hexo,butterfly,主題,doc,教程,文檔'
-description: 自定義代碼配色
+categories: Butterfly进阶教程
+keywords: 'hexo,butterfly,主题,doc,教程,文档'
+description: 自定义代码配色
 cover: https://cdn.jsdelivr.net/gh/jerryc127/CDN/img/CODE-COLOR-COVER.png
 abbrlink: b37b5fe3
 date: 2020-06-13 20:41:59
 comments: false
 ---
 
-在[Butterfly-安裝文檔-三-主題配置](http://butterfly.js.org/posts/4aa8abbe/#代碼高亮主題)中已經介紹瞭如何使用自定義代碼配色。
+在[Butterfly-安裝文档-三-主题配置](http://butterfly.js.org/posts/4aa8abbe/#代码高亮主题)中已經介紹瞭如何使用自定义代码配色。
 
-這篇文章是使用自定義代碼配色的實例教程。
+這篇文章是使用自定义代码配色的實例教程。
 
 ## Highlight
 
-以使用`Kimbie dark`主題配色為例子
+以使用`Kimbie dark`主题配色为例子
 
-### 配置`hljs`為`true`
+### 配置`hljs`为`true`
 
-修改Hexo根目錄下的`_config.yml`
+修改Hexo根目录下的`_config.yml`
 
 ```yaml
 highlight:
@@ -35,23 +35,23 @@ highlight:
  hljs: true
 ```
 
-###  配置`highlight_theme`為`false`
+###  配置`highlight_theme`为`false`
 
-修改`主題配置文件`
+修改`主题配置文件`
 
 ```yaml
 highlight_theme: false
 ```
 
-### 下載和修改CSS文件
+### 下载和修改CSS文件
 
 在[Github](https://github.com/highlightjs/highlight.js/blob/master/src/styles/kimbie.dark.css)上找到這個CSS
 
-在Hexo的根目錄`source`文件夾下創立一個`self`文件夾，在`self`文件夾創建一個`Kimbiedark.css`文件
+在Hexo的根目录`source`文件夹下创立一個`self`文件夹，在`self`文件夹創建一個`Kimbiedark.css`文件
 
-把Github上`Kimbie dark`的CSS代碼複製到`Kimbiedark.css`去。（你也可以直接從Github上下載這個CSS）
+把Github上`Kimbie dark`的CSS代码复制到`Kimbiedark.css`去。（你也可以直接從Github上下载這個CSS）
 
-**Kimbiedark.css**代碼如下
+**Kimbiedark.css**代码如下
 
 ```css
 /*
@@ -130,7 +130,7 @@ highlight_theme: false
 }
 ```
 
-修改這個CSS文件為
+修改這個CSS文件为
 
 ```css
 /*
@@ -142,14 +142,14 @@ highlight_theme: false
 
 /* 新添加的內容
   ------------------------------------- 
-  --hl-color                  代碼框字體顔色 【必須】 (把下面.hljs的 color複製到這裏來)
-  --hl-bg                     代碼框背景色 【必須】 (把下面.hljs的 background複製到這裏來)
-  --hltools-bg: #321a0f       代碼框頂部工具欄背景色 【可選】(如果你關掉了 copy、lang 和 shrink,可不用配置這個）
-  --hltools-color: #fff       代碼框頂部工具欄字體顔色 【可選】(如果你關掉了 copy、lang 和 shrink,可不用配置這個）
-  --hlnumber-bg: #221a0f      代碼框行數背景色 【可選】(如果已經關掉 line_number,可以不用配置這個)
-  --hlnumber-color: #fff      代碼框行數字體顔色 【可選】 (如果已經關掉 line_number,可以不用配置這個)
-  --hlscrollbar-bg: #d3af86   代碼框滾動條顔色 【可選】（默認為主題主顔色）
-  --hlexpand-bg: #d3af86      代碼框底部展開背景色 【可選】(如果已經關掉 highlight_height_limit,可以不用配置這個)
+  --hl-color                  代码框字體顔色 【必須】 (把下面.hljs的 color复制到這裏來)
+  --hl-bg                     代码框背景色 【必須】 (把下面.hljs的 background复制到這裏來)
+  --hltools-bg: #321a0f       代码框頂部工具欄背景色 【可選】(如果你關掉了 copy、lang 和 shrink,可不用配置這個）
+  --hltools-color: #fff       代码框頂部工具欄字體顔色 【可選】(如果你關掉了 copy、lang 和 shrink,可不用配置這個）
+  --hlnumber-bg: #221a0f      代码框行數背景色 【可選】(如果已經關掉 line_number,可以不用配置這個)
+  --hlnumber-color: #fff      代码框行數字體顔色 【可選】 (如果已經關掉 line_number,可以不用配置這個)
+  --hlscrollbar-bg: #d3af86   代码框滾動條顔色 【可選】（默認为主题主顔色）
+  --hlexpand-bg: #d3af86      代码框底部展開背景色 【可選】(如果已經關掉 highlight_height_limit,可以不用配置這個)
 */
 
 :root {
@@ -215,7 +215,7 @@ highlight_theme: false
   color: #98676a;
 }
 
-/* 更改的內容 把.hljs改為 #article-container figure.highlight .hljs *、
+/* 更改的內容 把.hljs改为 #article-container figure.highlight .hljs *、
 /* ------------------------------------- */
 #article-container figure.highlight .hljs {
   display: block;
@@ -236,7 +236,7 @@ highlight_theme: false
 
 ### 引入文件
 
-修改`主題配置文件`
+修改`主题配置文件`
 
 ```yaml
 inject:
@@ -252,25 +252,25 @@ inject:
 
 ## Prismjs
 
-以使用`prism-duotone-light`主題配色為例子
+以使用`prism-duotone-light`主题配色为例子
 
-###  配置`highlight_theme`為`false`
+###  配置`highlight_theme`为`false`
 
-修改`主題配置文件`
+修改`主题配置文件`
 
 ```yaml
 highlight_theme: false
 ```
 
-### 下載和修改CSS文件
+### 下载和修改CSS文件
 
 在[Github](https://github.com/PrismJS/prism-themes/blob/master/themes/prism-duotone-light.css)上找到這個CSS
 
-在 Hexo 的根目錄`source`文件夾下創立一個`self`文件夾，在`self`文件夾創建一個`duotone.css`文件
+在 Hexo 的根目录`source`文件夹下创立一個`self`文件夹，在`self`文件夹創建一個`duotone.css`文件
 
-把Github上`prism-duotone-light`的 CSS 代碼複製到``duotone.css`去。（你也可以直接從Github上下載這個CSS）
+把Github上`prism-duotone-light`的 CSS 代码复制到``duotone.css`去。（你也可以直接從Github上下载這個CSS）
 
-**prism-duotone-light**代碼如下
+**prism-duotone-light**代码如下
 
 ```css
 /*
@@ -447,19 +447,19 @@ pre > code.highlight {
 }
 ```
 
-修改這個CSS文件為
+修改這個CSS文件为
 
 ```css
 /* 新添加的內容
   ------------------------------------- 
-  --hl-color                  代碼框字體顔色 【必須】 (把下面 pre[class*="language-"]的 color 複製到這裏來)
-  --hl-bg                     代碼框背景色 【必須】 (把下面 pre[class*="language-"]的 background複製到這裏來)
-  --hltools-bg: #321a0f       代碼框頂部工具欄背景色 【可選】(如果你關掉了 copy、lang 和 shrink,可不用配置這個）
-  --hltools-color: #fff       代碼框頂部工具欄字體顔色 【可選】(如果你關掉了 copy、lang 和 shrink,可不用配置這個）
-  --hlnumber-bg: #221a0f      代碼框行數背景色 【可選】(如果已經關掉 line_number,可以不用配置這個)
-  --hlnumber-color: #fff      代碼框行數字體顔色 【可選】 (如果已經關掉 line_number,可以不用配置這個)
-  --hlscrollbar-bg: #d3af86   代碼框滾動條顔色 【可選】（默認為主題主顔色）
-  --hlexpand-bg: #d3af86      代碼框底部展開背景色 【可選】(如果已經關掉 highlight_height_limit,可以不用配置這個)
+  --hl-color                  代码框字體顔色 【必須】 (把下面 pre[class*="language-"]的 color 复制到這裏來)
+  --hl-bg                     代码框背景色 【必須】 (把下面 pre[class*="language-"]的 background复制到這裏來)
+  --hltools-bg: #321a0f       代码框頂部工具欄背景色 【可選】(如果你關掉了 copy、lang 和 shrink,可不用配置這個）
+  --hltools-color: #fff       代码框頂部工具欄字體顔色 【可選】(如果你關掉了 copy、lang 和 shrink,可不用配置這個）
+  --hlnumber-bg: #221a0f      代码框行數背景色 【可選】(如果已經關掉 line_number,可以不用配置這個)
+  --hlnumber-color: #fff      代码框行數字體顔色 【可選】 (如果已經關掉 line_number,可以不用配置這個)
+  --hlscrollbar-bg: #d3af86   代码框滾動條顔色 【可選】（默認为主题主顔色）
+  --hlexpand-bg: #d3af86      代码框底部展開背景色 【可選】(如果已經關掉 highlight_height_limit,可以不用配置這個)
 */
 
 :root {
@@ -530,7 +530,7 @@ pre[class*="language-"] {
 	border-radius: .3em;
 }
 /* ------------------------------------- */
-/* 到這裏為止，可以刪除 */
+/* 到這裏为止，可以刪除 */
 
 .token.comment,
 .token.prolog,
@@ -648,7 +648,7 @@ pre > code.highlight {
 
 ### 引入文件
 
-修改`主題配置文件`
+修改`主题配置文件`
 
 ```yaml
 inject:
